--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,16 +1,21 @@
+<%= render './shared/banner', list: @list %>
 <div class="container">
-  <h1><%= @list.name %></h1>
-  <%= link_to 'New bookmark', new_list_bookmark_path(@list) %> |
-  <%= link_to 'Back', lists_path  %>
+  <%= link_to 'New movie', new_list_bookmark_path(@list) ,class:"btn btn-primary m-3" %>
+  <%= link_to 'Back', lists_path, class:"btn btn-danger m-3"  %>
   <div class="row row-cols-sm-1 row-cols-sm-2 row-cols-lg-3">
       <% @list.movies.each do |m| %>
+      <% @bookmark = Bookmark.find_by_movie_id(m.id) %>
         <div class="col mb-4">
             <div class="card card-movie">
               <img src="<%=m.poster_url%>"  class="card-img-top" alt="...">
               <div class="card-body card-info">
-                <h5 class="card-title"><%= m.title%></h5>
-
-                <p class="card-text"><small><%= m.overview.truncate(50)%></small></p>
+                <h5 class="card-title "><%= m.title%></h5>
+                <p class="card-subtitle">⭐<%= m.rating %></p>
+                <p class="card-text"><small><%= m.overview.truncate(100)%></small></p>
+                <div class="footer d-flex justify-content-between">
+                  <h4>‟<%= m.bookmarks.first.comment %></h4>
+                  <%= link_to 'Delete', bookmark_path(@bookmark), class: "text-danger", method: :delete, data: { confirm: "Are you sure?" }  %>
+                </div>
               </div>
             </div>
         </div>
