--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active mx-2">
-        <%= link_to 'All List', lists_path, class:'btn btn-outline-primary'  %>
+        <%= link_to 'My Lists', lists_path, class:'btn btn-outline-primary'  %>
       </li>
       <li class="nav-item mx-2">
         <%= link_to 'New List', new_list_path, class:'btn btn-outline-success'  %>
