--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
   <%= f.button :submit, class:"btn btn-primary" %>
+  <%= f.input :photo, as: :file, required: true%>
   <%= link_to 'Cancel', :back, class:"btn btn-danger"  %>
 <% end %>
