--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,9 +4,15 @@
     <div class="cards">
       <% @lists.each do |list| %>
         <%= link_to list_path(list) do  %>
-            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/1000x500/?movies,<%=list.name%>;})">
+          <% if list.photo.attached? %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
               <%= list.name %>
             </div>
+          <% else %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+              <%= list.name %>
+            </div>
+          <% end %>
         <% end %>
       <% end %>
     </div>
