--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,6 @@
+<% if @list.photo.attached? %>
 <%= render './shared/banner', list: @list %>
+<% end %>
 <div class="container">
   <%= link_to 'New movie', new_list_bookmark_path(@list) ,class:"btn btn-primary m-3" %>
   <%= link_to 'Back', lists_path, class:"btn btn-danger m-3"  %>
