--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),  url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>');">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),  url('<%= cl_image_path list.photo.key, crop: :fill %>');">
   <div class="container text-center">
     <h1><%= @list.name %> movies</h1>
   </div>
